--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -25,13 +25,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install black isort flake8 pytest pytest-cov coverage codecov
+          pip install black isort flake8 pytest pytest-cov coverage codecov mypy
 
       - name: Lint and format check
         run: |
           black --check .
           isort --check-only .
           flake8 .
+
+      - name: Type checking with mypy
+        run: |
+          mypy ttl_dict
 
       - name: Run tests with coverage
         run: |
